--- a/part-4/.env
+++ b/part-4/.env
@@ -1,1 +1,2 @@
 DB_URI=mongodb+srv://shachar:sgo21426@cluster0.oriwg.mongodb.net/part4?retryWrites=true&w=majority
+SECRET = SHACHARLIKESBABYSITTING
