--- a/part-4/package.json
+++ b/part-4/package.json
@@ -11,10 +11,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.1.1"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12"
   },
   "devDependencies": {
     "jest": "^27.4.4",
